--- a/src/componentes/ghostBtn.css
+++ b/src/componentes/ghostBtn.css
@@ -13,3 +13,16 @@
     background-position: 0 0%;
     border-radius: 0% 0.6rem 0.6rem 0%;
 }
+
+/* Estilos para orientación vertical */
+@media (orientation: portrait) {
+    .ghostBtn{
+        font-size: 0.8rem;
+    }
+  }
+  
+  @media (max-width: 1322px) and (orientation: landscape){
+    .ghostBtn{
+        font-size: 1rem;
+    }
+}
